css/style_phone.css
/* codé par Thomas Bouret alias satt105 */
@charset "UTF-8";

html,
body {
  background-color: rgb(136, 0, 0);
  padding: 0px;
  margin: 0px;
  text-align: center;
  color: white;
}

body {
  background-image: url(image/fond_back.jpg);
  background-size: cover;
}

.textemulticolore {
  background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
  -webkit-background-clip: text;
  -moz-background-clip: text;
  background-clip: text;
  color: transparent;
}

section {
  display: flex;
  justify-content: center;
  flex-flow: column;
  margin: auto auto;
  height: 100px;
  width: 300px;
}

h1 {
  display: block;
  margin: auto auto;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

p {
  text-align: center;
  letter-spacing: 1px;
}

footer {
  text-align: center;
  box-sizing: border-box;
  width: 100%;
  padding: 20px 0px;
  background: #4f4f4f;
  box-shadow: 0px 0px 15px #333333;
  border-top: 2px solid #771717;
}

footer p {
  width: 90%;
  margin: 0 auto;
}

